Adding previous notebooks.

--- a/notebooks/Non local Exist or Training is other models [Deep Prose].ipynb
+++ b/notebooks/Non local Exist or Training is other models [Deep Prose].ipynb
@@ -4,7 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The whole purpose of this deep_prose is a demo of the what I want to have t generative interactive deep learning "
+    "The whole purpose of this deep_prose is a demo of the what I want to have t generative interactive deep learning \n",
+    "\n",
+    "Questions about AWS\n",
+    "1. How do you use git to store your notebooks?\n",
+    "2. It works like regular git?\n",
+    "\n",
+    "Release items:\n",
+    "\n",
+    "- DONE Transformers must be at version 3.5.1\n",
+    "- IN-Progress creating a situation\n",
+    "\n",
+    "TODO Create a website / UI \n",
+    "\n",
+    "IN PROGRESS : Figure out a situation design\n",
+    "\n",
+    "Create two situations.\n",
+    "\n",
+    "Future items\n",
+    "TODO: Epsilon state transitions (you unlock a new fsm with rules (interaction with the significant other) going from asking out to date and so forth\n",
+    "\n",
+    "TODO: Differentiable state machines (make the state transtions of the game POMDP truly dynamic? )\n",
+    "\n",
+    "TODO: Bertdb (store all results and index it by sentiment. Also store every session with an engagement time)\n",
+    "\n",
+    "\n",
+    "TODO: Create minimal deployment\n"
    ]
   },
   {
@@ -33,18 +58,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting transformers==3.5.1\n",
+      "  Using cached transformers-3.5.1-py3-none-any.whl (1.3 MB)\n",
+      "Requirement already satisfied: filelock in /usr/local/anaconda3/lib/python3.8/site-packages (from transformers==3.5.1) (3.0.12)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /usr/local/anaconda3/lib/python3.8/site-packages (from transformers==3.5.1) (4.47.0)\n",
+      "Collecting tokenizers==0.9.3\n",
+      "  Downloading tokenizers-0.9.3-cp38-cp38-macosx_10_11_x86_64.whl (2.0 MB)\n",
+      "\u001b[K     |████████████████████████████████| 2.0 MB 4.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: protobuf in /usr/local/anaconda3/lib/python3.8/site-packages (from transformers==3.5.1) (3.13.0)\n",
+      "Requirement already satisfied: sacremoses in /usr/local/anaconda3/lib/python3.8/site-packages (from transformers==3.5.1) (0.0.43)\n",
+      "Collecting sentencepiece==0.1.91\n",
+      "  Using cached sentencepiece-0.1.91-cp38-cp38-macosx_10_6_x86_64.whl (1.0 MB)\n",
+      "Requirement already satisfied: numpy in /usr/local/anaconda3/lib/python3.8/site-packages (from transformers==3.5.1) (1.18.5)\n",
+      "Requirement already satisfied: packaging in /usr/local/anaconda3/lib/python3.8/site-packages (from transformers==3.5.1) (20.4)\n",
+      "Requirement already satisfied: requests in /usr/local/anaconda3/lib/python3.8/site-packages (from transformers==3.5.1) (2.24.0)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /usr/local/anaconda3/lib/python3.8/site-packages (from transformers==3.5.1) (2020.6.8)\n",
+      "Requirement already satisfied: six>=1.9 in /usr/local/anaconda3/lib/python3.8/site-packages (from protobuf->transformers==3.5.1) (1.15.0)\n",
+      "Requirement already satisfied: setuptools in /usr/local/anaconda3/lib/python3.8/site-packages (from protobuf->transformers==3.5.1) (49.2.0.post20200714)\n",
+      "Requirement already satisfied: click in /usr/local/anaconda3/lib/python3.8/site-packages (from sacremoses->transformers==3.5.1) (7.1.2)\n",
+      "Requirement already satisfied: joblib in /usr/local/anaconda3/lib/python3.8/site-packages (from sacremoses->transformers==3.5.1) (0.16.0)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/anaconda3/lib/python3.8/site-packages (from packaging->transformers==3.5.1) (2.4.7)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /usr/local/anaconda3/lib/python3.8/site-packages (from requests->transformers==3.5.1) (2.10)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/anaconda3/lib/python3.8/site-packages (from requests->transformers==3.5.1) (3.0.4)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/anaconda3/lib/python3.8/site-packages (from requests->transformers==3.5.1) (1.25.9)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/anaconda3/lib/python3.8/site-packages (from requests->transformers==3.5.1) (2020.11.8)\n",
+      "Installing collected packages: tokenizers, sentencepiece, transformers\n",
+      "  Attempting uninstall: tokenizers\n",
+      "    Found existing installation: tokenizers 0.9.2\n",
+      "    Uninstalling tokenizers-0.9.2:\n",
+      "      Successfully uninstalled tokenizers-0.9.2\n",
+      "  Attempting uninstall: sentencepiece\n",
+      "    Found existing installation: sentencepiece 0.1.94\n",
+      "    Uninstalling sentencepiece-0.1.94:\n",
+      "      Successfully uninstalled sentencepiece-0.1.94\n",
+      "  Attempting uninstall: transformers\n",
+      "    Found existing installation: transformers 3.4.0\n",
+      "    Uninstalling transformers-3.4.0:\n",
+      "      Successfully uninstalled transformers-3.4.0\n",
+      "Successfully installed sentencepiece-0.1.91 tokenizers-0.9.3 transformers-3.5.1\n"
+     ]
+    }
+   ],
    "source": [
     "#Core concept you go on various dates / friend oriented adventures that are open ended\n",
     "#Main characters for this tech demo is Saati orare  ???? can we think of a better name\n",
-    "#"
+    "#\n",
+    "!pip install transformers==3.5.1 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +125,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-64-19408212ce1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtransformers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTFAutoModelWithLMHead\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAutoTokenizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPipeline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtransformers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_verbosity_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-65-19408212ce1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtransformers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTFAutoModelWithLMHead\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAutoTokenizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPipeline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtransformers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_verbosity_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'transformers' is not defined"
      ]
     }
